[tool.poetry]
name = "poe-api"
version = "0.1.0"
description = ""
authors = ["LlamaIndex Inc."]
license = "MIT"
readme = "README.md"
packages = [{include = "poe_api"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi-poe = "^0.0.3"
gpt_index = {path = "../../gpt_index", develop = true}
openai = "^0.27.3"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"